# slipgram

./: README.md  pyproject.toml
slipgram/: __init__.py  cli.py  core.py
tests/: test_core.py
