[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "slipgram"
version = "0.1.0"
description = "Protected pre-tokenizer vocabulary canonicalization for code-oriented prompts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
slipgram = "slipgram.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
